core-2.8: merge <forum>/plugins/vaultster 0.0.1 alpha by PlasmaJohn

--- a/configure.ac
+++ b/configure.ac
@@ -134,6 +134,7 @@ AC_CONFIG_FILES([
         plugins/system/Makefile
         plugins/tmi/Makefile
         plugins/tweaks/Makefile
+        plugins/vaultster/Makefile
         plugins/visibility/Makefile
         plugins/weapons/Makefile
         $extraplugins ])
