--- a/plugins/odmbc/Makefile.in
+++ b/plugins/odmbc/Makefile.in
@@ -19,23 +19,26 @@ nwnx_odbc_pgsql.so:: nwnx_odbc_clean_o
 
 ifdef MYSQL_SUPPORT
 TARGETS := $(TARGETS) nwnx_odbc_mysql.so
+CPPFLAGS := $(CPPFLAGS) -DMYSQL_SUPPORT
 TARGET_ANY = 1
 nwnx_odbc_mysql.so:: $(SODEPS) mysql.o
-	$(TARGETCXX) -DMYSQL_SUPPORT -lmysqlclient
+	$(TARGETCXX) -lmysqlclient
 endif
 
 ifdef SQLITE_SUPPORT
 TARGETS := $(TARGETS) nwnx_odbc_sqlite.so
+CPPFLAGS := $(CPPFLAGS) -DSQLITE_SUPPORT
 TARGET_ANY = 1
 nwnx_odbc_sqlite.so:: $(SODEPS) sqlite.o
-	$(TARGETCXX) -DSQLITE_SUPPORT -lsqlite3
+	$(TARGETCXX) -lsqlite3
 endif
 
 ifdef PGSQL_SUPPORT
 TARGETS := $(TARGETS) nwnx_odbc_pgsql.so
+CPPFLAGS := $(CPPFLAGS) -DPGSQL_SUPPORT
 TARGET_ANY = 1
 nwnx_odbc_pgsql.so:: $(SODEPS) pgsql.o
-	$(TARGETCXX) -DPGSQL_SUPPORT -lpq
+	$(TARGETCXX) -lpq
 endif
 
 .PHONY: warn_if_no_target
