Funcs: - Added GetEventHandler/SetEventHandler

--- a/plugins/funcs/Makefile.in
+++ b/plugins/funcs/Makefile.in
@@ -55,7 +55,9 @@ OFILES  = \
     funcs/crit/f_GetCriticalHitMultiplier.o      \
     funcs/crit/f_GetCriticalHitRange.o           \
     funcs/event/f_GetCreatureEventHandler.o      \
+    funcs/event/f_GetEventHandler.o              \
     funcs/event/f_SetCreatureEventHandler.o      \
+    funcs/event/f_SetEventHandler.o              \
     funcs/faction/f_GetFactionId.o               \
     funcs/faction/f_SetFactionId.o               \
     funcs/faction/f_SetLastHostileActor.o        \
