--- a/plugins/funcs/Makefile.in
+++ b/plugins/funcs/Makefile.in
@@ -99,6 +99,7 @@ OFILES  = \
     funcs/net/f_GetPCPort.o                      \
     funcs/other/f_DumpObject.o                   \
     funcs/other/f_GetACNaturalBase.o             \
+    funcs/other/f_GetCorpseDecayTime.o           \
     funcs/other/f_GetDamageImmunity.o            \
     funcs/other/f_GetPCBodyBag.o                 \
     funcs/other/f_GetPCFileName.o                \
@@ -108,6 +109,7 @@ OFILES  = \
     funcs/other/f_JumpToLimbo.o                  \
     funcs/other/f_SetACNaturalBase.o             \
     funcs/other/f_SetAlignmentValue.o            \
+    funcs/other/f_SetCorpseDecayTime.o           \
     funcs/other/f_SetCreatureSize.o              \
     funcs/other/f_SetGender.o                    \
     funcs/other/f_SetIsCreatureDisarmable.o      \
