--- a/plugins/odmbc/Makefile.in
+++ b/plugins/odmbc/Makefile.in
@@ -1,57 +1,48 @@
 NWNXDIR  = ../..
-DFLAGS   :=
-CPPFLAGS = $(PLUGIN_CPPFLAGS) -I$(NWNXDIR) $(DFLAGS)
+CPPFLAGS = $(PLUGIN_CPPFLAGS) -I$(NWNXDIR)
 LFLAGS   = $(PLUGIN_LFLAGS)
 
 SODEPS   := HookSCORCO.o CExoString.o ObjectStorage.o NWNXodbc.o plugin-odbc.o
 LIBS     := -lz
 
-TARGET_ANY = 0
 TARGETCXX = $(CXX) $(LFLAGS) -o $@ $^ $(LIBS)
 
-all: warn_if_no_target nwnx_odbc_mysql.so nwnx_odbc_sqlite.so nwnx_odbc_pgsql.so
+all:
+ifdef ODMBC_MYSQL
+	-rm *.o
+	make MYSQL_SUPPORT=1 nwnx_odbc_mysql_dynamic.so nwnx_odbc_mysql_static.so
+endif
+ifdef ODMBC_PGSQL
+	-rm *.o
+	make PGSQL_SUPPORT=1 nwnx_odbc_pq_dynamic.so
+endif
+ifdef ODMBC_SQLITE
+	-rm *.o
+	make SQLITE_SUPPORT=1 nwnx_odbc_sqlite_dynamic.so nwnx_odbc_sqlite_static.so
+endif
 
-nwnx_odbc_clean_o:
-	-@rm *.o
-nwnx_odbc_mysql.so:: nwnx_odbc_clean_o
-nwnx_odbc_sqlite.so:: nwnx_odbc_clean_o
-nwnx_odbc_pgsql.so:: nwnx_odbc_clean_o
+.LIBPATTERNS = lib%.a
 
 ifdef MYSQL_SUPPORT
-TARGETS := $(TARGETS) nwnx_odbc_mysql.so
-CPPFLAGS := $(CPPFLAGS) -DMYSQL_SUPPORT -USQLITE_SUPPORT -UPGSQL_SUPPORT
-TARGET_ANY = 1
-nwnx_odbc_mysql.so:: $(SODEPS) mysql.o
+CPPFLAGS := $(CPPFLAGS) -DMYSQL_SUPPORT
+nwnx_odbc_mysql_static.so: $(SODEPS) mysql.o -lmysqlclient
+	$(TARGETCXX) -lm
+nwnx_odbc_mysql_dynamic.so: $(SODEPS) mysql.o
 	$(TARGETCXX) -lmysqlclient
 endif
 
 ifdef SQLITE_SUPPORT
-TARGETS := $(TARGETS) nwnx_odbc_sqlite.so
-CPPFLAGS := $(CPPFLAGS) -DSQLITE_SUPPORT -UPGSQL_SUPPORT -UMYSQL_SUPPORT
-TARGET_ANY = 1
-nwnx_odbc_sqlite.so:: $(SODEPS) sqlite.o
+CPPFLAGS := $(CPPFLAGS) -DSQLITE_SUPPORT
+nwnx_odbc_sqlite_static.so: $(SODEPS) sqlite.o -lsqlite3
+	$(TARGETCXX)
+nwnx_odbc_sqlite_dynamic.so: $(SODEPS) sqlite.o
 	$(TARGETCXX) -lsqlite3
 endif
 
 ifdef PGSQL_SUPPORT
-TARGETS := $(TARGETS) nwnx_odbc_pgsql.so
-CPPFLAGS := $(CPPFLAGS) -DPGSQL_SUPPORT -USQLITE_SUPPORT -UMYSQL_SUPPORT
-TARGET_ANY = 1
-nwnx_odbc_pgsql.so:: $(SODEPS) pgsql.o
+CPPFLAGS := $(CPPFLAGS) -DPGSQL_SUPPORT
+nwnx_odbc_pq_dynamic.so: $(SODEPS) pgsql.o
 	$(TARGETCXX) -lpq
-endif
-
-.PHONY: warn_if_no_target
-warn_if_no_target:
-ifeq ($(TARGET_ANY),0)
-	@echo ""
-	@echo "************************************"
-	@echo "              WARNING "
-	@echo "You don't have any targets selected."
-	@echo "No database plugin is being built."
-	@echo " See README in the odbmc directory."
-	@echo "************************************"
-	@echo ""
 endif
 
 clean:
@@ -59,6 +50,3 @@ clean:
 
 distclean: clean
 	/bin/rm -f Makefile
-
-# automatic installation not supported, since the user needs to
-# select a plugin
