core-2.8: use cmake instead of autoconf/make

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,10 @@
 *.o
 *.so
 Makefile
-/autom4te.cache
-/config.h
-/config.log
-/config.status
-/configure
-/plugins/defenses/DefensesObjCmds.h
-/plugins/defenses/DefensesStrCmds.h
-/plugins/funcs/FuncsObjCmds.h
-/plugins/funcs/FuncsStrCmds.h
-/plugins/spells/SpellsObjCmds.h
-/plugins/spells/SpellsStrCmds.h
-/plugins/structs/StructsObjCmds.h
-/plugins/structs/StructsStrCmds.h
-/plugins/system/SystemObjCmds.h
-/plugins/system/SystemStrCmds.h
-/plugins/tweaks/TweaksObjCmds.h
-/plugins/tweaks/TweaksStrCmds.h
-/plugins/weapons/WeaponsObjCmds.h
-/plugins/weapons/WeaponsStrCmds.h
+CMakeFiles
+CMakeCache.txt
+cmake_install.cmake
+/plugins/*/*StrCmds.h
+/plugins/*/*ObjCmds.h
+compiled/
+plugins/vaultster/vaultster-server
