--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,11 @@ project(nwnx-core-2.8)
 # You can exclude plugins from being built here.
 set(dont_build_plugins connect)
 
-set(CMAKE_CXX_FLAGS "-Wall -fPIC -Wno-unused -Wno-write-strings")
+set(CMAKE_C_FLAGS "-mtune=i386 -m32 -Wall -Wno-unused -Wno-write-strings")
+set(CMAKE_CXX_FLAGS "-mtune=i386 -m32 -Wall -Wno-unused -Wno-write-strings")
+set(CMAKE_SHARED_LIBRARY_C_FLAGS "")
+set(CMAKE_SHARED_LIBRARY_CXX_FLAGS "")
+
 enable_language(ASM)
 
 find_package(ZLIB REQUIRED)
