--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ find_program(gperf gperf)
 if (NOT gperf)
 	message(WARNING "No gperf found, cannot compile gperf-dependent plugins")
 endif (NOT gperf)
-find_program(ruby ruby1.8 ruby)
+find_program(ruby NAMES ruby1.8 ruby)
 if (NOT ruby)
 	message(WARNING "No ruby interpreter found, cannot compile ruby-interpreter dependent plugins")
 endif (NOT ruby)
