core-2.8/vaultster: use FindBoost.cmake

--- a/plugins/vaultster/CMakeLists.txt
+++ b/plugins/vaultster/CMakeLists.txt
@@ -1,17 +1,12 @@
-find_library(lboostthread boost_thread)
-find_library(lboost boost_system)
-find_library(lboostopt boost_program_options)
+find_package(Boost 1.35 COMPONENTS system thread program_options)
+if (Boost_FOUND)
+	include_directories(${Boost_INCLUDE_DIR})
+	add_executable(vaultster-server vaultster-serv vaultster-config blowfish)
+	target_link_libraries(vaultster-server z ${Boost_LIBRARIES})
 
-if (lboost AND lboostopt AND lboostthread)
-		add_executable(vaultster-server vaultster-serv vaultster-config blowfish)
-		target_link_libraries(vaultster-server z ${lboostthread} ${lboost}
-			${lboostopt})
+	add_module(vaultster NWNXVaultster client blowfish plugin-vaultster)
+	target_link_libraries(vaultster z ${Boost_LIBRARIES})
 
-		add_module(vaultster NWNXVaultster client blowfish plugin-vaultster)
-		target_link_libraries(vaultster z ${lboostthread} ${lboost}
-			${lboostopt})
-
-else (lboost AND lboostopt AND lboostthread)
+else (Boost_FOUND)
 	message(WARNING "Cannot find boost libraries, not building vaultster")
-endif (lboost AND lboostopt AND lboostthread)
-
+endif (Boost_FOUND)
