--- a/plugins/extend/Makefile.in
+++ b/plugins/extend/Makefile.in
@@ -3,9 +3,9 @@ CXX      = gcc
 INCS	 = -I. -I.. -I../.. -I ../../include -I/usr/local/include
 LIBS	 = -L/usr/local/lib -lm -lz
 DEFS	 = -D_REENTRANT -D_THREAD_SAFE
-CFLAGS   = -mtune=i386 -pipe -m32 -g -O2 -Werror $(DEFS) $(INCS)
-CPPFLAGS = -mtune=i386 -pipe -m32 -O2 -Werror $(DEFS) $(INCS)
-LFLAGS   = -m32  -w -fPIC -shared -rdynamic
+CFLAGS   = @CFLAGS@ -Werror $(DEFS) $(INCS)
+CPPFLAGS = @CPPFLAGS@ -Werror $(DEFS) $(INCS)
+LFLAGS   = @LDFLAGS@ -w -fPIC -shared -rdynamic
 
 all: nwnx_extend.so
 
