Complete external server player list customization rework (now it uses 2.8 API)

--- a/plugins/fixes/CMakeLists.txt
+++ b/plugins/fixes/CMakeLists.txt
@@ -1,1 +1,2 @@
-add_module(fixes FixesHooks NWNXFixes plugin-fixes)
+include_directories(../../api)
+add_module(fixes ../../api/all ../../api/nwnsyms.S ../../include/nx_hook FixesHooks FixesHooksNewApi NWNXFixes plugin-fixes)
