--- a/plugins/fixes/Makefile.in
+++ b/plugins/fixes/Makefile.in
@@ -1,10 +1,10 @@
 CPPFLAGS = $(PLUGIN_CPPFLAGS) $(INCS)
 LFLAGS   = $(PLUGIN_LFLAGS)
-INCS	 = -I. -I.. -I../.. -I ../../include -I/usr/local/include
+INCS	 = -I. -I.. -I../.. -I../../include -I/usr/local/include
 
 all: nwnx_fixes.so
 
-nwnx_fixes.so: FixesHooks.o NWNXFixes.o plugin-fixes.o
+nwnx_fixes.so: ../../api/nwnsyms.o ../../api/all.o FixesHooks.o FixesHooksNewApi.o NWNXFixes.o plugin-fixes.o
 	$(CXX) $(LFLAGS) -o $@ $^ $(LIBS)
 
 clean:
