--- a/plugins/fixes/nwnx2.ini
+++ b/plugins/fixes/nwnx2.ini
@@ -8,6 +8,7 @@ hp_limit = -10                     # Negative HP limit - values up to -127 are a
 hide_charlist_all = 0              # Hide the whole online characters list on login (appears empty)
 hide_charlist_levels = 0           # Hide the class(es) (displays nothing instead of class list)
 hide_charlist_portraits = 0        # Hide the portrait (shows default male/female portrait)
+hide_charlist_dms = 0              # Hide DMs and possessed NPCs
 
 cap_ability_inc = 0                # If greater than zero, set ability increase cap.
 cap_ability_dec = 0                # If greater than zero, set ability decrease cap.
