--- a/configure.ac
+++ b/configure.ac
@@ -2,6 +2,7 @@
 AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
 # AC_CONFIG_SRCDIR([linnwnx2])
 AC_CONFIG_HEADER([config.h])
+CFLAGS="-g"
 
 AC_DEFUN([AX_C_CHECK_FLAG],[
           AC_PREREQ([2.61])
