Update cmake build to support out of tree builds.
This doesn't change anything for those who want to build in
the source tree or have any impact on the auto tools build
system.

- Add fake target to always rebuild compiled directory.
- Modify gperf commands to add an additional parameter for their
target name and update all CMakeLists.txt for plugins that use gperf.
- Move all compile.sh functionality possible to CMakeLists.txt.

--- a/plugins/defenses/CMakeLists.txt
+++ b/plugins/defenses/CMakeLists.txt
@@ -1,7 +1,7 @@
 if (gperf)
 
-add_gperf_target(DefensesStrCmds DefensesStr DEFENSES STR)
-add_gperf_target(DefensesObjCmds DefensesObj DEFENSES OBJ)
+add_gperf_target(defenses DefensesStrCmds DefensesStr DEFENSES STR)
+add_gperf_target(defenses DefensesObjCmds DefensesObj DEFENSES OBJ)
 
 include_directories(.)
 add_module(defenses NWNXDefenses plugin-defenses
