--- a/plugins/funcs/CMakeLists.txt
+++ b/plugins/funcs/CMakeLists.txt
@@ -1,7 +1,7 @@
 if (gperf)
 
-add_gperf_target(FuncsStrCmds FuncsStr FUNCS STR)
-add_gperf_target(FuncsObjCmds FuncsObj FUNCS OBJ)
+add_gperf_target(funcs FuncsStrCmds FuncsStr FUNCS STR)
+add_gperf_target(funcs FuncsObjCmds FuncsObj FUNCS OBJ)
 
 include_directories(.)
 add_module(funcs NWNXFuncs plugin-funcs
