--- a/plugins/spells/CMakeLists.txt
+++ b/plugins/spells/CMakeLists.txt
@@ -1,7 +1,7 @@
 if (gperf)
 
-add_gperf_target(SpellsStrCmds SpellsStr SPELLS STR)
-add_gperf_target(SpellsObjCmds SpellsObj SPELLS OBJ)
+add_gperf_target(spells SpellsStrCmds SpellsStr SPELLS STR)
+add_gperf_target(spells SpellsObjCmds SpellsObj SPELLS OBJ)
 
 include_directories(.)
 add_module(spells NWNXSpells plugin-spells
