--- a/plugins/weapons/CMakeLists.txt
+++ b/plugins/weapons/CMakeLists.txt
@@ -1,7 +1,7 @@
 if (gperf)
 
-add_gperf_target(WeaponsStrCmds WeaponsStr WEAPONS STR)
-add_gperf_target(WeaponsObjCmds WeaponsObj WEAPONS OBJ)
+add_gperf_target(weapons WeaponsStrCmds WeaponsStr WEAPONS STR)
+add_gperf_target(weapons WeaponsObjCmds WeaponsObj WEAPONS OBJ)
 
 include_directories(.)
 add_module(weapons NWNXWeapons plugin-weapons
