--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,13 @@
 cmake_minimum_required(VERSION 2.8)
 project(nwnx-core-2.8)
 
+set(NWNX_OUTPUT_DIR ${PROJECT_BINARY_DIR}/compiled)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${NWNX_OUTPUT_DIR})
+
 # You can exclude plugins from being built here.
-set(dont_build_plugins )
+set(dont_build_plugins
+
+)
 
 # Compatibility with cmake 2.8.9 and above.
 if(POLICY CMP0018)
@@ -35,6 +40,19 @@ add_library(nwnx2 SHARED nwnx2lib NWNXBase modules lists gline
 	lib/nwn_data lib/nwn_funcs lib/nwn_hooks
 	lib/nx_hook lib/nx_log lib/nx_safe lib/nx_signature
 )
+
+# Fake target to force recreating the compiled directory.
+add_custom_target(always_rebuild_compiled ALL
+    COMMAND ${CMAKE_COMMAND} -E remove_directory ${NWNX_OUTPUT_DIR}
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${NWNX_OUTPUT_DIR}
+)
+
+add_custom_command(
+    TARGET nwnx2 POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy ARGS ${PROJECT_SOURCE_DIR}/nwnx2.ini ${NWNX_OUTPUT_DIR}
+    COMMAND ${CMAKE_COMMAND} -E copy ARGS ${PROJECT_SOURCE_DIR}/nwnstartup.sh ${NWNX_OUTPUT_DIR}
+)
+
 set_target_properties(nwnx2 PROPERTIES PREFIX "")
 target_link_libraries(nwnx2 dl z)
 
@@ -46,11 +64,12 @@ function(add_module target)
 	set_target_properties(${target} PROPERTIES PREFIX "nwnx_")
 endfunction()
 
-function(add_gperf_target gperf v k l)
+function(add_gperf_target target gperf v k l)
 	add_custom_command(
-		OUTPUT "${gperf}.h"
-		COMMAND ${PROJECT_SOURCE_DIR}/plugins/gperf_gen.sh "${v}" "${k}" "${l}"
-		DEPENDS ${PROJECT_SOURCE_DIR}/plugins/gperf_gen.sh "${gperf}.gperf"
+                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/plugins/${target}
+                OUTPUT "${PROJECT_SOURCE_DIR}/plugins/${target}/${gperf}.h"
+                COMMAND ${PROJECT_SOURCE_DIR}/plugins/gperf_gen.sh "${v}" "${k}" "${l}"
+                DEPENDS ${PROJECT_SOURCE_DIR}/plugins/gperf_gen.sh "${gperf}.gperf"
 	)
 endfunction()
 
@@ -60,6 +79,15 @@ foreach(plugin ${plugins})
 
 	list(FIND dont_build_plugins ${na} dontbuild)
 	if (${dontbuild} EQUAL -1)
+        if(EXISTS "${pa}/nwnx2.ini")
+             add_custom_command(
+                 TARGET nwnx2 POST_BUILD
+                 COMMAND echo ARGS "" >> ${NWNX_OUTPUT_DIR}/nwnx2.ini
+                 COMMAND echo ARGS "" >> ${NWNX_OUTPUT_DIR}/nwnx2.ini
+                 COMMAND cat ARGS ${pa}/nwnx2.ini >> ${NWNX_OUTPUT_DIR}/nwnx2.ini
+             )
+        endif(EXISTS "${pa}/nwnx2.ini")
+
 		add_subdirectory(${pa})
 	else (${dontbuild} EQUAL -1)
 		message(STATUS "Skipping plugin ${na} due to configuration")
