--- a/plugins/chat/CMakeLists.txt
+++ b/plugins/chat/CMakeLists.txt
@@ -8,7 +8,4 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-return-type")
 add_module(chat
     HookChat
     NWNXChat
-    plugin-chat
-    ../../api/nwnsyms.S
-    ../../api/all
-)
+    plugin-chat)
