--- a/plugins/connect/Makefile.in
+++ b/plugins/connect/Makefile.in
@@ -4,7 +4,7 @@ INCS	 = -I. -I.. -I../.. -I ../../include -I/usr/local/include
 
 all: nwnx_connect.so
 
-nwnx_connect.so: ../../api/nwnsyms.o ../../api/all.o ConnectHooks.o NWNXConnect.o plugin-connect.o
+nwnx_connect.so: ConnectHooks.o NWNXConnect.o plugin-connect.o
 	$(CXX) $(LFLAGS) -o $@ $^ $(LIBS)
 
 clean:
