--- a/plugins/fixes/Makefile.in
+++ b/plugins/fixes/Makefile.in
@@ -4,7 +4,7 @@ INCS	 = -I. -I.. -I../.. -I../../include -I/usr/local/include
 
 all: nwnx_fixes.so
 
-nwnx_fixes.so: ../../api/nwnsyms.o ../../api/all.o FixesHooks.o FixesHooksNewApi.o NWNXFixes.o plugin-fixes.o
+nwnx_fixes.so: FixesHooks.o FixesHooksNewApi.o NWNXFixes.o plugin-fixes.o
 	$(CXX) $(LFLAGS) -o $@ $^ $(LIBS)
 
 clean:
