--- a/plugins/events/CMakeLists.txt
+++ b/plugins/events/CMakeLists.txt
@@ -1,2 +1,14 @@
-add_module(events CExoLinkedList CExoLocString HookFunc NWNXEvents
-	plugin-events)
+include_directories(
+    ../../
+    .
+)
+
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-return-type")
+
+add_module(events
+    HookFunc
+    NWNXEvents
+    plugin-events
+    ../../api/nwnsyms.S
+    ../../api/all
+)
