plugins/resman: Overhaul resource loading.
* Add NWNX 2.8 event handlers.
* Rebuild the basic arcitecture around the event hooks, making the
  builtin file loader merely one of many potential resource loaders.
* Fix issue with leaking CRes instances when a resource only existed
  outside of the module/hak/etc.
* Change CExoResMan::GetKeyEntry to handle existance checks, which makes
  it possible to remove CExoResMan::Exists hook.
* Change resource map to std::unordered_map.
* Add nwnx2.ini.
* Add some settings and optional hooks to help aid debugging memory leaks.
* Update to the 2.8 api.

--- a/plugins/resman/CMakeLists.txt
+++ b/plugins/resman/CMakeLists.txt
@@ -1,3 +1,5 @@
-add_module(resman HookDemandRes NWNXResMan plugin-resman)
+add_module(resman ../../api/nwnsyms.S ../../api/all
+   HookDemandRes NWNXResMan plugin-resman DirectoryHandler)
+
 set_target_properties(resman PROPERTIES
-	COMPILE_FLAGS "-Wno-deprecated")
+        COMPILE_FLAGS "-std=c++0x -Wno-return-type")
