nwnx2: Move NwnDefines into nwnx2.so
* Fix some lingering whitespace/line ending issues.
* Update impacted build systems.
* Remove unused pascal style integer typedefs.

--- a/Makefile.in
+++ b/Makefile.in
@@ -41,7 +41,8 @@ LIBRARY = \
     lib/nx_hook.o      \
     lib/nx_log.o       \
     lib/nx_safe.o      \
-    lib/nx_signature.o
+    lib/nx_signature.o \
+    lib/NwnDefines.o
 
 
 all: nwnx2.so subdirs override
