--- a/plugins/resman/Makefile.in
+++ b/plugins/resman/Makefile.in
@@ -4,7 +4,7 @@ LFLAGS   = $(PLUGIN_LFLAGS)
 
 all: nwnx_resman.so
 
-nwnx_resman.so: HookDemandRes.o NwnDefines.o NWNXResMan.o plugin-resman.o
+nwnx_resman.so: HookDemandRes.o NWNXResMan.o plugin-resman.o
 	$(CXX) $(LFLAGS) -o $@ $^ $(LIBS)
 
 clean:
