--- a/plugins/resman/CMakeLists.txt
+++ b/plugins/resman/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_module(resman HookDemandRes NwnDefines NWNXResMan plugin-resman)
+add_module(resman HookDemandRes NWNXResMan plugin-resman)
 set_target_properties(resman PROPERTIES
 	COMPILE_FLAGS "-Wno-deprecated")
