plugins/structs: add GetEffectNumIntegers(), fix possible mem clobbering
Plugin assumes 16 effect integers by default, which is wrong. Functions
would also allow writing over the array length with no checks, clobbering
the CGameEffect* struct and whatever else follows.

This patch adds GetEffectNumIntegers() to retrieve the array size and adds
safeguards to prevent clobbering the stack.

--- a/plugins/structs/CMakeLists.txt
+++ b/plugins/structs/CMakeLists.txt
@@ -12,6 +12,7 @@ add_module(structs NWNXStructs plugin-structs
 	funcs/f_GetDurationRemaining
 	funcs/f_GetHasEffect
 	funcs/f_GetInteger
+	funcs/f_GetNumIntegers
 	funcs/f_GetSpellId
 	funcs/f_GetTrueType
 	funcs/f_SetCreator
