plugins/jvm: port to 2.8 VM api and fix odmbc hooking
This also cleans up a lot of dead code, and updates the copyright struct
with a working email address. Not that we need it.

--- a/plugins/jvm/CMakeLists.txt
+++ b/plugins/jvm/CMakeLists.txt
@@ -20,7 +20,7 @@ if (JNI_FOUND AND JAVA_FOUND)
 	)
 
 	include_directories(${JNI_INCLUDE_DIRS})
-	add_module(jvm FunctionHooks NWNXJVM plugin-jvm
+	add_module(jvm NWNXJVM plugin-jvm
 		org_nwnx_nwnx2_jvm_NWScript
 		org_nwnx_nwnx2_jvm_NWScript_addon)
 	target_link_libraries(jvm ${JAVA_JVM_LIBRARY})
