--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ add_library(nwnx2 SHARED nwnx2lib NWNXBase modules lists gline
 
     core/core
     core/events/Mainloop
+    core/events/Module
     core/events/RunScript
     core/events/Object
 )
