make -std=c++11 the project default
This adds a check to pick either c++0x or c++11 depending on compiler
support. It will error out when neither standard flag is supported.

--- a/plugins/resman/CMakeLists.txt
+++ b/plugins/resman/CMakeLists.txt
@@ -1,4 +1,3 @@
 add_module(resman HookDemandRes NWNXResMan plugin-resman DirectoryHandler)
 
-set_target_properties(resman PROPERTIES
-        COMPILE_FLAGS "-std=c++0x -Wno-return-type")
+set_target_properties(resman PROPERTIES COMPILE_FLAGS "-Wno-return-type")
