--- a/plugins/connect/CMakeLists.txt
+++ b/plugins/connect/CMakeLists.txt
@@ -1,3 +1,5 @@
 include_directories(../../api)
 
 add_module(connect ConnectHooks NWNXConnect plugin-connect)
+
+set_target_properties(connect PROPERTIES COMPILE_FLAGS "-O0")
