--- a/plugins/chat/CMakeLists.txt
+++ b/plugins/chat/CMakeLists.txt
@@ -3,9 +3,9 @@ include_directories(
     .
 )
 
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-return-type")
-
 add_module(chat
     HookChat
     NWNXChat
     plugin-chat)
+
+set_target_properties(chat PROPERTIES COMPILE_FLAGS "-O0")
