--- a/plugins/resman/CMakeLists.txt
+++ b/plugins/resman/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_module(resman HookDemandRes NWNXResMan plugin-resman DirectoryHandler)
 
-set_target_properties(resman PROPERTIES COMPILE_FLAGS "-Wno-return-type")
+set_target_properties(resman PROPERTIES COMPILE_FLAGS "-O0")
