Added INI options to enable or disable logging of timestamps (disabled by default)

--- a/nwnx2.ini
+++ b/nwnx2.ini
@@ -1,5 +1,6 @@
 [NWNX]
 disablenwnxinit=n     #Set to "y" to not enforce the NWNX!INIT requirement
+logTimestamp=n	      #Set to "y" or 1 to enable logging of timestamps per log message across all logs
 
 [Debug]
 debuglevel=0          #Set to 1 or higher to output successively
