--- a/plugins/damage/CMakeLists.txt
+++ b/plugins/damage/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_module(damage Hooks NWNXDamage plugin-damage)
 
-set_target_properties(chat PROPERTIES COMPILE_FLAGS "-O0")
+set_target_properties(damage PROPERTIES COMPILE_FLAGS "-O0")
