--- a/plugins/areas/CMakeLists.txt
+++ b/plugins/areas/CMakeLists.txt
@@ -1,9 +1,20 @@
 add_module(areas
-    NWNXAreas plugin-areas
+	NWNXAreas plugin-areas
 
-    Services
+	Services
 
-    funcs/LoadArea
-    funcs/UnloadArea
-    funcs/UpdateCreatures
+	funcs/DumpArea
+	funcs/GetAreaHeight
+	funcs/GetAreaLighting
+	funcs/GetAreaListen
+	funcs/GetAreaSpot
+	funcs/GetAreaTileset
+	funcs/GetAreaWidth
+	funcs/GetNoRest
+	funcs/LoadArea
+	funcs/SetAreaListen
+	funcs/SetAreaName
+	funcs/SetAreaSpot
+	funcs/UnloadArea
+	funcs/UpdateCreatures
 )
