even more additions to nwnx_areas. new functions: GetAreaLoadscreen(), GetAreaPVP(), GetTileAtLocation() new structure: tile_info.h updates to area_info.h, DumpArea().

--- a/plugins/areas/CMakeLists.txt
+++ b/plugins/areas/CMakeLists.txt
@@ -8,9 +8,12 @@ add_module(areas
 	funcs/GetAreaLighting
 	funcs/GetAreaListen
 	funcs/GetAreaSpot
+	funcs/GetAreaLoadscreen
+	funcs/GetAreaPVP
 	funcs/GetAreaTileset
 	funcs/GetAreaWidth
 	funcs/GetNoRest
+	funcs/GetTileAtLocation
 	funcs/LoadArea
 	funcs/SetAreaListen
 	funcs/SetAreaName
